# juvo-player-opengl

./: .gitignore  CMakeLists.txt  README.md  gles.pc.in  gles_sample.manifest  gles_sample.pc.in  project_def.prop  update_version.sh
docs/: building.md
include/: Animation.h  Background.h  CommonStructs.h  ExternStructs.h  Framerate.h  GLES.h  Graph.h  Loader.h  LogConsole.h  Menu.h  Metrics.h  ModalWindow.h  Options.h  Playback.h  ProgramBuilder.h  Settings.h  Subtitles.h  Text.h  TextRenderer.h  TextTextureGenerator.h  Tile.h  TileAnimation.h  Utility.h  log.h  version.h
include/freetype-2.9/src/: Menu.h  Tile.h  main.cpp.working_without_menu_class
include/shaders/: background.frag  background.vert  framedImage.frag  graph.frag  image.frag  image.vert  loader.frag  logConsole.frag  modalWindow.frag  options.frag  playbackBar.frag  playbackBar.vert  playbackIcon.frag  playbackIcon.vert  playbackLoader.frag  playbackLoader.vert  textRenderer.frag  textTextureGenerator.frag  textTextureGenerator.vert  tile.frag  tile.vert
packaging/: gles.spec  gles_sample.spec
src/: Animation.cpp  Background.cpp  Background.h  Framerate.cpp  Graph.cpp  Loader.cpp  Loader.h  LogConsole.cpp  Menu.cpp  Menu.h  Metrics.cpp  ModalWindow.cpp  Options.cpp  Playback.cpp  Playback.h  ProgramBuilder.cpp  Settings.cpp  Subtitles.cpp  Text.cpp  Text.h  TextRenderer.cpp  TextTextureGenerator.cpp  Tile.cpp  Tile.h  TileAnimation.cpp  TileAnimation.h  Underlay.h  Utility.cpp  main.cpp
